tests/negative/scope/class-extends-interface-with-too-few-type-parameters/err.expected
ERROR:
The object `testing:I` was given 1 type parameter(s) at test.smol:9:12-9:22:
         8 | 
         9 | class C is I[Boolean] {}
           |            ^^^^^^^^^^

However, that object was defined to take 2 type parameter(s) at test.smol:7:12-7:20:
         6 | 
         7 | interface I[#A, #B] {}
           |            ^^^^^^^^
         8 | 
